Source/WebCore/css/CSSStyleSheet.h
@@ -86,6 +86,7 @@ public:
     virtual bool isLoading();
 
     virtual void checkLoaded();
+    void startLoadingDynamicSheet();
 
     Document* document();
 
